Fri Nov 14 10:54:01 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - Shrink the second column when we're in the big list, since we
	    won't be using it.

Fri Nov 14 10:53:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added a "Show warnings" preference to the buddy list.

Fri Nov 14 10:52:30 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Hide the other preference pages for now, since they're currently
	    empty.

Tue Nov 11 23:32:48 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* mkipk.sh:
	  - Updated to work with the new directory structure in data/images.

Tue Nov 11 23:32:05 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimBuddyList.h:
	* src/QGaimMainWindow.cpp:
	  - The Big List (TM) now looks like gtk-gaim's.

Tue Nov 11 17:28:01 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	  - It's now up to paintCell() to format the output for the group
	    information, and it looks much nicer.

Mon Nov 03 21:49:36 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimBuddyList.cpp:
	* src/QGaimMainWindow.cpp:
	* src/QGaimPrefsDialog.cpp:
	* src/QGaimPrefsDialog.h:
	  - Added an optional Big List, which is default for larger resolutions.

Mon Nov 03 15:40:36 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimConvWindow.cpp:
	  - Fixed an image name in a menu.

Mon Nov 03 14:53:27 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimMainWindow.cpp:
	  - Fixed the order of core and UI initialization, so that signals in
	    QGaimBListWindow won't have problems.

Mon Nov 03 10:59:17 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimPrefsDialog.cpp:
	  - Fix icons in the preferences dialog.

Mon Nov 03 10:40:15 PST 2003  Christian Hammond <chipx86@gnupdate.org>

	* src/QGaimAccountsWindow.cpp: