@@ -1,3 +1,8 @@
+Sat Nov 15 22:06:12 PST 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	  - Replaced some glib calls with their Qt equivalents.
+
 Fri Nov 14 10:54:01 PST 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBuddyList.cpp:
